ode4j CHANGELOG
---------------

the rules for this file:
  * entries are sorted newest-first.
  * summarise sets of changes.
  * don't ever delete anything.
  * keep the format consistent (79 char width, YYYY-MM-DD date format).

------------------------------------------------------------------------------

SUMMARY of changes for ode-0.12
- Refactoring of OdeMath method names
- new functions in DGeom
- Quickstep refactored and sped up
- Clean-up of demos
- Bug fixes

=============
TODO include DMatrix, DRoation, DMisc into OdeMath i.o. internal Rotation/Matrix?!
=============

2012-May-07 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Included DMatrix/DRotation/DMisc in OdeMath.

2012-May-07 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Migrated APIs for DMatrix, DMisc and DRotation
		  - Migrated remaining demos
		  - Started migration of DrawStuff.
		  - Fixed some bugs in new Matrix multiplication.

2012-Apr-22 Tilmann Zaschke
		* Migration to ode-0.12:
		  - collision_kernel.*
		  - Fixed QuickStep/DemoBoxStack
		  - Demos up to demo_moving_convex

2012-Apr-14 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Migrated matrix.cpp, fast*.c, objects.h, util.*, ode.cpp.

2012-Apr-13 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Migrated QuickStep, LCP and parts of Matrix.

2012-Apr-10 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Fixed all joint-files.

2012-Apr-09 Tilmann Zaschke
		* Migration to ode-0.12:
		  - 'finnished' include-files for now
		  - migrated DxBox and quickstep.
		  TODO Box is faulty!!!! 
		  
2012-Apr-08 Tilmann Zaschke
		* Migration to ode-0.12:
		  - odemath.h

2010-Oct-24 Tilmann Zaschke
		* Added missing Lo/HiStop functions in DAMotorJoint (Bug ID: 3088463)

2010-Jun-19 Tilmann Zaschke
		* Release of ode4j-0.11.1-j1.4
		   ******************************************************************

2010-Jun-08 Tilmann Zaschke
		* Updated javadoc for DHeightfieldData build(...) methods.

2010-Jun-07 Tilmann Zaschke